<resources>
    <string name="app_name">印象笔记</string>

    <!--文字笔记-->
    <string name="text_Notes_editText_title">笔记标题</string>
    <string name="text_Notes_text_book">我的第一个笔记本</string>
    <string name="text_Notes_editText_idea">写下此刻的想法...</string>
    <!--首页抽屉内容-->
    <string name="first_page_drawer_all_notes">所有笔记</string>
    <string name="first_page_drawer_note_book">笔记本</string>
    <string name="first_page_drawer_shortcut">快捷方式</string>
    <string name="first_page_drawer_group_chat">工作群聊</string>
    <string name="first_page_drawer_waster_page">废纸篓</string>
    <string name="first_page_drawer_upgrade">升级账户</string>
    <string name="first_page_drawer_explore_note">探索印象笔记</string>
    <string name="first_page_drawer_set_Up_the">设置</string>


    <array name="clock">
        <item>"12"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>
        <item>"10"</item>
        <item>"11"</item>
    </array>
    <!--设置界面-->
    <string name="set_activity_card_free_tv">免费账户</string>
    <string name="set_activity_card_standard_tv">标准账户</string>
    <string name="set_activity_card_senior_tv">高级账户</string>
    <string name="set_activity_card_explore_tv">探索印象笔记不同的账户级别</string>
    <string name="set_activity_card_user_tv">账户信息</string>
    <string name="set_activity_card_camera_tv">拍照</string>
    <string name="set_activity_card_note_tv">笔记</string>
    <string name="set_activity_card_note_book_tv">笔记本</string>
    <string name="set_activity_card_action_message_tv">工作群聊</string>
    <string name="set_activity_card_noti_tv">通知</string>
    <string name="set_activity_card_courseset_tv">教程</string>
    <string name="set_activity_card_synchronization_tv">同步</string>
    <string name="set_activity_card_recommend_tv">推荐内容</string>
    <string name="set_activity_card_action_search_tv">搜索和存储</string>
    <string name="set_activity_card_support_tv">技术支持</string>
    <string name="set_activity_card_clause_tv">法律条款</string>
    <!--标题栏-->
    <string name="item_title_tv">标题</string>
    <!--提醒的日期界面-->
    <string name="remend_data_day">日期</string>
    <string name="remend_data_time">时间</string>
    <!--主界面-->
    <string name="main_activity_drawer_view_for_tv">开始同步</string>
    <string name="notes_text_content_et_hint">写下此刻的想法...</string>
    <!--提醒界面-->
    <string name="remend_pop_biu_et_hint">添加提醒...</string>
    <string name="remend_pop_tv">我是一个笔记本</string>
    <!--文字笔记圈i的抽屉-->
    <string name="about_updated">已更新</string>
    <string name="about_create_time">创建时间</string>
    <string name="about_note">我的第一个笔记本</string>
    <string name="about_label">编辑标签</string>
    <string name="about_location">位置信息未找到</string>
    <!--文字界面menu三个小点-->
    <string name="menu_asve_text">保存笔记</string>
    <string name="menu_shape_text">共享笔记</string>
    <string name="menu_search_text">笔记内搜索</string>
    <string name="menu_connection_text">复制笔记连接</string>
    <string name="menu_duplicate_text">复制</string>
    <string name="menu_shortcuts_text">添加快捷方式</string>
    <string name="menu_screen_text">添加到手机主屏幕</string>
    <string name="menu_simplified_form_text">简化格式</string>
    <string name="menu_setting_text">设置</string>
    <string name="menu_delete_text">删除笔记</string>


    <string name="mode_ready"></string>
    <string name="mode_pause"></string>
    <string name="mode_lose_prefix"></string>
    <string name="mode_lose_suffix"></string>
    <string name="snake_layout_text_text"></string>

</resources>
