<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/menu_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_save_layout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_options_done" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/menu_save_text_left"
            android:text="@string/menu_asve_text"
            android:textSize="@dimen/menu_save_text_size" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:layout_margin="@dimen/menu_view"
        android:background="@color/menu_view"/>
    <LinearLayout
        android:id="@+id/menu_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_share_layout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/fen_xiang" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/menu_share_text_left"
            android:text="@string/menu_shape_text"
            android:textSize="@dimen/menu_share_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_search_layout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/biji_nei_sou_suo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/menu_search_text_left"
            android:text="@string/menu_search_text"
            android:textSize="@dimen/menu_search_text_size" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:layout_margin="@dimen/menu_view"
        android:background="@color/menu_view"/>
    <LinearLayout
        android:id="@+id/menu_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_connection_layout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/fu_zhi_lian_jei" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/menu_connection_text_left"
            android:text="@string/menu_connection_text"
            android:textSize="@dimen/menu_connection_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_duplicate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_duplicate_layout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/fu_zhi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/menu_duplicate_text_left"
            android:text="@string/menu_duplicate_text"
            android:textSize="@dimen/menu_duplicate_text_size" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:layout_margin="@dimen/menu_view"
        android:background="@color/menu_view"/>
    <LinearLayout
        android:id="@+id/menu_shortcuts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_shortcuts_layout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/kuai_jei_fang_shi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/menu_shortcuts_text_left"
            android:text="@string/menu_shortcuts_text"
            android:textSize="@dimen/menu_shortcuts_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_screen_layout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/tian_jia_dao_zhu_ping_mu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/menu_screen_text_left"
            android:text="@string/menu_screen_text"
            android:textSize="@dimen/menu_screen_text_size" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:layout_margin="@dimen/menu_view"
        android:background="@color/menu_view"/>
    <LinearLayout
        android:id="@+id/menu_simplified_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_simplified_form_layout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/jian_hua_ge_shi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/menu_simplified_form_text_left"
            android:text="@string/menu_simplified_form_text"
            android:textSize="@dimen/menu_simplified_form_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_setting_layout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_list_settings_darktheme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/menu_setting_text_left"
            android:text="@string/menu_setting_text"
            android:textSize="@dimen/menu_setting_text_size" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:layout_margin="@dimen/menu_view"
        android:background="@color/menu_view"/>
    <LinearLayout
        android:id="@+id/menu_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_margin="@dimen/menu_delete_layout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/shan_chu_bi_ji" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/menu_delete_text_left"
            android:text="@string/menu_delete_text"
            android:textSize="@dimen/menu_delete_text_size" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/menu_view"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="撤销" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="重做" />
    </LinearLayout>


</LinearLayout>