<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_back"
            android:src="@mipmap/amsc_ic_action_back_cab" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/about_layout_left"
            android:layout_marginTop="@dimen/about_layout_top"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_updated"
                android:textColor="@color/about_updated" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="系统时间" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/about_create_time"
                android:textColor="@color/about_create_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="系统时间" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:layout_marginLeft="40dp"
        android:background="@color/about_view_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/bi_ji_ben" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/about_note"
            android:textColor="@color/about_note_text"
            android:textSize="@dimen/about_note_font_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:layout_marginLeft="@dimen/about_view_left"
        android:background="@color/about_view_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/biao_qian" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:text="@string/about_label"
            android:textColor="@color/about_label_text"
            android:textSize="@dimen/about_label_font_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:layout_marginLeft="@dimen/about_view_left"
        android:background="@color/about_view_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_location_layout_left"
        android:layout_marginTop="@dimen/about_location_layout_top"
        android:layout_marginBottom="@dimen/about_location_layout_bottom"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/wei_zhi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/about_location"
            android:textColor="@color/about_location_text"
            android:textSize="@dimen/about_location_font_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:layout_marginLeft="@dimen/about_view_left"
        android:background="@color/about_view_background" />
</LinearLayout>